# cvmfs-rust

./: .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile.bench  Makefile  README.md  bench.sh  clippy.toml
.github/workflows/: binaries.yml  release.yml  rust.yml
src/: blacklist.rs  breadcrumb.rs  cache.rs  catalog.rs  certificate.rs  common.rs  database_object.rs  directory_entry.rs  dns.rs  fetcher.rs  file_system.rs  geo.rs  history.rs  lib.rs  main.rs  manifest.rs  reflog.rs  repository.rs  revision_tag.rs  root_file.rs  whitelist.rs
tests/: repository_test.rs
