[package]
name = "cvmfs"
version = "0.2.0"
description = "CernVM-FS client implementation in Rust"
authors = ["José Molina <jmolinacolmenero@gmail.com>"]
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/moliholy/cvmfs-rust"
keywords = ["cvmfs", "filesystem", "fuse", "cernvm"]
categories = ["filesystem", "science"]
readme = "README.md"

[lib]
name = "cvmfs"
path = "src/lib.rs"

[[bin]]
name = "cvmfs-cli"
path = "src/main.rs"

[dependencies]
# Cryptography and hashing
sha1 = "0.10"
md5 = "0.8"
hex = "0.4"
x509-certificate = "0.25"

# Database and storage
rusqlite = { version = "0.39", features = ["blob"] }

# Filesystem integration
fuse_mt = "0.6"
libc = "0.2"

# Network and HTTP
reqwest = { version = "0.13", features = ["blocking"] }

# Utilities
chrono = "0.4"
compress = "0.2"
thiserror = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"
rsa = { version = "0.9.10", features = ["sha1"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
todo = "deny"
unimplemented = "deny"
redundant_type_annotations = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
wildcard_imports = "allow"
ref_option_ref = "allow"

[dev-dependencies]
serial_test = "3.4.0"
